add missing dependency

--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
 		"url": ""
 	},
 	"dependencies": {
-		"underscore": "*"
+		"underscore": "*",
+		"sax": "*"
+	},
+	"devDependencies": {
+		"docco": "*",
+		"jake": "*"
 	}
 }
