--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "CasparCG",
+	"name": "caspar-cg",
 	"description": "Caspar CG to Node interface",
 	"version": "0.0.1",
 	"author": "Kevin Smith (@respectTheCode)",
 	"homepage": "https://github.com/respectTheCode/node-caspar-cg",
 	"repository": {
 		"type": "git",
-		"url": ""
+		"url": "https://github.com/respectTheCode/node-caspar-cg.git"
 	},
 	"dependencies": {
 		"underscore": "*",
