fix loadTemplate with \ in the name

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "caspar-cg",
 	"description": "Caspar CG to Node interface",
-	"version": "0.0.5",
+	"version": "0.0.5-1",
 	"author": "Kevin Smith (@respectTheCode)",
 	"homepage": "https://github.com/respectTheCode/node-caspar-cg",
 	"repository": {
