--- a/package.json
+++ b/package.json
@@ -13,7 +13,14 @@
 		"sax": "*"
 	},
 	"devDependencies": {
-		"jake": "*",
-		"async": "*"
+		"grunt": "~0.4",
+		"grunt-contrib-clean": "~0.4.0",
+		"grunt-contrib-watch": "~0.3.1",
+		"grunt-mocha-test": "~0.6.3",
+		"grunt-contrib-jshint": "~0.7.1",
+		"jshint-stylish": "~0.1.3",
+		"load-grunt-tasks": "~0.2.0",
+		"async": "~0.2.9",
+		"chai": "~1.8.1"
 	}
 }
