--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
 		"type": "git",
 		"url": "https://github.com/respectTheCode/node-caspar-cg.git"
 	},
+	"scripts": {
+		"test": "grunt mochaTest"
+	},
 	"dependencies": {
 		"underscore": "*",
 		"sax": "*"
