--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
 		"grunt-contrib-watch": "~0.3.1",
 		"grunt-mocha-test": "~0.6.3",
 		"grunt-contrib-jshint": "~0.7.1",
+		"grunt-jscs-checker": "^0.6.1",
 		"jshint-stylish": "~0.1.3",
 		"load-grunt-tasks": "~0.2.0",
 		"async": "~0.2.9",
