--- a/package.json
+++ b/package.json
@@ -12,16 +12,16 @@
 		"test": "grunt mochaTest"
 	},
 	"dependencies": {
-		"underscore": "*",
-		"sax": "*"
+		"underscore": "~1.8.3",
+		"sax": "~1.1.1"
 	},
 	"devDependencies": {
-		"grunt": "~0.4",
+		"grunt": "~0.4.5",
 		"grunt-contrib-clean": "~0.4.0",
 		"grunt-contrib-watch": "~0.3.1",
 		"grunt-mocha-test": "~0.6.3",
 		"grunt-contrib-jshint": "~0.7.1",
-		"grunt-jscs-checker": "^0.6.1",
+		"grunt-jscs-checker": "2.8.0",
 		"jshint-stylish": "~0.1.3",
 		"load-grunt-tasks": "~0.2.0",
 		"async": "~0.2.9",
