--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 		"test": "grunt mochaTest"
 	},
 	"dependencies": {
-		"node-osc": "git+ssh://git@github.com/respectTheCode/node-osc.git",
+		"node-osc": "respectTheCode/node-osc",
 		"underscore": "~1.8.3",
 		"sax": "~1.1.1"
 	},
