--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
 		"grunt-contrib-clean": "~0.4.0",
 		"grunt-contrib-watch": "~0.3.1",
 		"grunt-mocha-test": "~0.6.3",
-		"grunt-contrib-jshint": "~0.7.1",
+		"grunt-contrib-jshint": "1.0.0",
 		"grunt-jscs": "2.8.0",
 		"jshint-stylish": "~0.1.3",
 		"load-grunt-tasks": "~0.2.0",
